--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -8,11 +8,15 @@
 
 .field_with_errors {
   display: block;
-  background: #fbf0f0;
+  background: none;
 }
 
-.registration-title {
-  margin-bottom: 60px;
+.field_with_errors input {
+  background: #ff8c8c !important;
+}
+
+.field_with_errors textarea {
+  background: #ff8c8c !important;
 }
 
 .tickets {
@@ -26,3 +30,4 @@
 .text {
   color: #fff !important;
 }
+
