--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -21,7 +21,7 @@
 
       <%= form_with(model: [@event, @event.tickets.build], local: true) do |form| %>
           <div class="count col-md-6">
-            <h2>Ilość biletów:</h2>
+            <h2>Ilość biletów(max 5):</h2>
             <%= form.text_field :count, class: "form-control" %>
           </div>
           <div class="buy col-md-3">
@@ -74,5 +74,3 @@
 
 <% end %>
 
-<%= link_to 'Edit', edit_event_path(@event) %> |
-<%= link_to 'Back', events_path %>
