--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -20,11 +20,23 @@
         <%= f.label :name, "Nazwa użytkownika" %>
         <%= f.text_field :name, class: 'form-control' %>
 
-        <%= f.label :age, "Data urodzenia" %>
-        <%= f.date_select :age%>
 
         <%= f.label :email, "Email" %>
         <%= f.email_field :email, class: 'form-control' %>
+
+
+        <div class="field">
+          <%= f.label :age, "Data urodzenia" %>
+          <%= f.text_field :age, id: :user_age, "data-provide" => 'datepicker', class: 'datepicker form-control' %>
+        </div>
+
+        <script type="text/javascript">
+            $(document).ready(function(){
+                $('.datepicker').datepicker({
+                    format: "yyyy-mm-dd"
+                });
+            });
+        </script>
 
         <%= f.label :password, "Hasło" %>
         <%= f.password_field :password, class: 'form-control' %>
@@ -36,5 +48,3 @@
     <% end %>
   </div>
 </div>
-
-<%= link_to 'Back', users_path %>
