--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -6,6 +6,48 @@
   font-size: 23px;
 }
 
+.dropdown-menu {
+  width: 200px;
+  margin-top: -30px;
+  margin-left: 10px;
+}
+
+.datepicker-dropdown {
+  width: inherit;
+  margin-top: 35px;
+  margin-left: 33px;
+}
+
+.header-event {
+
+  .btn {
+    width: 150px;
+    margin-bottom: 30px;
+  }
+  display: inline-block;
+  width: 100%;
+  h1 {
+    display: inline-block;
+  }
+
+  div {
+
+    padding-left: 10px;
+    display: inline-block;
+  }
+  input {
+    width: 100px;
+    display: inline-block;
+  }
+
+  .dropdown {
+    margin-left: 20px;
+    button{
+      width: 200px;
+    }
+  }
+}
+
 .background-item {
   background: #F5F5F5;
   border-radius: 5px;
@@ -142,7 +184,7 @@ text-center {
   background: #deebfc;
 }
 
-.details-event div{
+.details-event div {
   padding: 12px;
 }
 
@@ -171,7 +213,6 @@ text-center {
   background: #a3a3a3;
 }
 
-
 .archived-event:hover {
   background: #b7b7b7;
 }
@@ -191,7 +232,7 @@ text-center {
   display: inline-block;
 }
 
-.buy-button .count{
+.buy-button .count {
   text-align: right;
 }
 
@@ -204,4 +245,9 @@ text-center {
 
 .datepicker {
   padding: 6px !important;
+}
+
+.date-pick {
+  top: -8px;
+  position: relative;
 }
