--- a/app/assets/stylesheets/tickets.scss
+++ b/app/assets/stylesheets/tickets.scss
@@ -1,10 +1,29 @@
 // Place all the styles related to the Tickets controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-.text-left{
+.text-left {
   text-align: left;
 }
 
-.event{
+.event {
   text-align: left;
 }
+
+.history-tickets {
+  background: #e8f0ff;
+  border-radius: 10px;
+  padding: 6px;
+}
+
+.deleted {
+  background: #fffeef;
+  border-radius: 10px;
+  padding: 6px;
+}
+
+.to-deleted {
+  background: #ffd5c1;
+  border-radius: 10px;
+  padding: 6px;
+}
+
