poprawiono walidacjÄe biletÃow

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -50,10 +50,10 @@
                 </p>
                 <p class="col-md-2">
                   <strong>Cena:</strong>
-                  <%= ticket.price %>
+                  <%= ticket.price %> zł
                 </p>
                 <p class="col-md-1">
-                  <strong>ilość:</strong>
+                  <strong>Ilość:</strong>
                   <%= ticket.count %>
                 </p>
                 <p class="col-md-4">
