--- a/app/views/tickets/_details.html.erb
+++ b/app/views/tickets/_details.html.erb
@@ -6,7 +6,7 @@
     <h4><%= ticket.event.date_event %></h4>
   </div>
   <div class="col-md-2">
-    <h4><%= ticket.event.price %> zł</h4>
+    <h4><%= ticket.price %> zł</h4>
   </div>
   <div class="col-md-1">
     <h4><%= ticket.count %></h4>
